--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/tipoElemPlantilla/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/tipoElemPlantilla/ver.xhtml
@@ -19,7 +19,13 @@
     <ui:define name="content">
         <div class="EmptyBox5"></div>
         <p:panel>
-            <h:form enctype="multipart/form-data" >
+            <h:form enctype="multipart/form-data"  id="consultaForm">
+                <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
+                    <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
+                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Si" action="#{catTipoElementoPlantillaController.eliminarTipoElemPlantilla()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
+                </p:dialog>
                 <p:focus id="focus" context="p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel for="nombre"  value="Nombre: " class=" Responsive"></p:outputLabel>
