correccion de bugs

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/index.xhtml
@@ -22,7 +22,7 @@
         <p:panel>
             <h:form id="consultaForm" > 
                 
-                <p:remoteCommand name="rcReload" autoRun="true" update="consulta"  />
+                <p:remoteCommand name="rcReload" autoRun="true" update="consulta" actionListener="#{catMateriaController.printMensajeEliminado()}"  />
                 
                 
                 <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
