--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
@@ -65,7 +65,7 @@
                         #{avance.acumulado}
                     </p:column>
                     <p:column headerText="% Avance" >
-                        #{avance.porcentaje} %
+                        #{avance.porcentaje}
                     </p:column>
                     <f:facet name="footer">
                         Total de alumnos #{rptEstadisticoAvanceController.totalAlumnos}
