correccion de bug al agregar grado, no se mostraba en cat seccion

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
@@ -56,7 +56,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Adicionar Seccion" action="#{catSeccionController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Adicionar Seccion" action="#{catSeccionController.initNuevo()}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{catSeccionController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
             <div class="EmptyBox5"></div>
