--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
@@ -13,7 +13,7 @@
             <p:menuitem value="Agregar Respuestas"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
-        
+
     </ui:define>
     <ui:define name="content">  
         <div class="EmptyBox5"></div>
@@ -22,7 +22,7 @@
                 <p:dialog widgetVar="dlgEliminar2" header="Eliminar" modal="true">
                     <p:outputLabel value="¿Está Realmente seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Si" action="#{gestionarEvaluacionController.eliminarExpediente()}" update="consultaForm" oncomplete="PF('dlgEliminar2').hide()"></p:commandButton>
+                    <p:commandButton value="Si" action="#{gestionarEvaluacionController.eliminarRespuesta()}" update="consultaForm" oncomplete="PF('dlgEliminar2').hide()"></p:commandButton>
                     <p:commandButton value="No" onclick="PF('dlgEliminar2').hide();" ></p:commandButton>
                 </p:dialog>
                 <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
@@ -50,12 +50,12 @@
                     <p:column headerText="Acciones" style="width: 12%">
                         <!--<p:commandLink ><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Item" ></i></p:commandLink>-->
                         <p:commandLink action="#{gestionarEvaluacionController.modificarResp(car)}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Respuesta" ></i></p:commandLink>
-<!--                        <p:commandLink  ><i class="icon-portfolio Fs25 Red MarRight10" title="Agregar respuestas" ></i></p:commandLink>-->
-                        <p:commandLink  onclick="PF('dlgEliminar').show();" immediate="true" >
+                        <!--                        <p:commandLink  ><i class="icon-portfolio Fs25 Red MarRight10" title="Agregar respuestas" ></i></p:commandLink>-->
+                        <p:commandLink action="#{gestionarEvaluacionController.eliminaRespuesta(car)}"  onclick="PF('dlgEliminar').show();" immediate="true" >
                             <i class="icon-close Fs25 Red MarRight10" title="Eliminar Respuesta"></i>
                         </p:commandLink>
                     </p:column>
-                    
+
                 </p:dataTable>
 
                 <div class="EmptyBox20"></div>
